--- a/index.html
+++ b/index.html
@@ -5,190 +5,202 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CVPR 2026 Tutorial | Foundations and Frontiers of Watermarking</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
 <style>
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     margin: 0;
-    background: #f9f9f9;
-    color: #222;
+    font-family: 'Inter', sans-serif;
+    background: #f4f6f9;
+    color: #1a1a1a;
     line-height: 1.6;
 }
 
-header {
-    background: #111;
+.hero {
+    background: linear-gradient(135deg, #111827, #1f2937);
     color: white;
-    padding: 60px 20px;
+    padding: 80px 20px;
     text-align: center;
 }
 
-header h1 {
-    margin: 0;
-    font-size: 2.2rem;
+.hero img {
+    height: 60px;
+    margin-bottom: 20px;
 }
 
-header h2 {
+.hero h1 {
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+}
+
+.hero h2 {
     font-weight: 400;
-    margin-top: 10px;
+    font-size: 1.2rem;
+    opacity: 0.9;
 }
 
-section {
-    max-width: 1000px;
+.container {
+    max-width: 1100px;
     margin: 60px auto;
     padding: 0 20px;
 }
 
 h3 {
-    border-bottom: 2px solid #ddd;
-    padding-bottom: 10px;
+    font-size: 1.6rem;
+    margin-bottom: 20px;
+    border-left: 5px solid #2563eb;
+    padding-left: 15px;
+}
+
+.card {
+    background: white;
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.05);
+    margin-bottom: 40px;
 }
 
 .speakers {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     gap: 30px;
 }
 
 .speaker {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    text-align: center;
+}
+
+.speaker img {
+    width: 140px;
+    height: 140px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-bottom: 15px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.15);
+}
+
+.speaker h4 {
+    margin: 5px 0;
 }
 
 .schedule-item {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
-footer {
-    text-align: center;
-    padding: 40px 20px;
-    background: #111;
-    color: white;
-    margin-top: 60px;
-}
 a {
-    color: #0066cc;
+    color: #2563eb;
     text-decoration: none;
 }
+
 a:hover {
     text-decoration: underline;
+}
+
+.footer {
+    text-align: center;
+    padding: 40px 20px;
+    background: #111827;
+    color: white;
+    margin-top: 80px;
 }
 </style>
 </head>
 
 <body>
 
-<header>
+<div class="hero">
+    <img src="assets/cvpr_logo.png" alt="CVPR 2026 Logo">
     <h1>Foundations and Frontiers of Watermarking</h1>
-    <h2>Algorithms, Multimodal Extensions, Benchmarks, and Authenticity Frameworks</h2>
+    <h2>Algorithms · Multimodal Extensions · Benchmarks · Authenticity Frameworks</h2>
     <p>CVPR 2026 Tutorial · Half-Day · In Person</p>
-</header>
+</div>
 
-<section>
+<div class="container">
+
+<div class="card">
 <h3>Overview</h3>
 <p>
-Invisible watermarking has re-emerged as a core component of security tools in modern generative AI systems. 
-This tutorial provides a unified end-to-end overview of watermarking, spanning classical signal-processing 
-foundations, modern deep-learning and multimodal techniques, robustness evaluation and benchmarking, and 
-real-world deployment in provenance frameworks such as C2PA and Content Credentials.
+Invisible watermarking has re-emerged as a critical pillar of trustworthy AI and media authenticity in the era of generative models. 
+This tutorial provides a unified end-to-end treatment of watermarking, spanning classical signal-processing theory, 
+modern deep-learning methods, multimodal extensions (image, video, audio, 3D), robustness benchmarking (WAVES), 
+and real-world deployment within provenance ecosystems such as C2PA and Content Credentials.
 </p>
-<p>
-Our goal is to equip researchers and practitioners with a clear understanding of theoretical foundations, 
-state-of-the-art methods, evaluation strategies, and practical deployment considerations for trustworthy media.
-</p>
-</section>
+</div>
 
-<section>
+<div class="card">
 <h3>Speakers</h3>
 <div class="speakers">
 
 <div class="speaker">
+<img src="assets/vishal.jpg">
 <h4>Dr. Vishal Asnani</h4>
 <p>Adobe Research</p>
-<p>Watermarking, content authenticity, and proactive attribution technologies.</p>
 </div>
 
 <div class="speaker">
+<img src="assets/shruti.jpg">
 <h4>Dr. Shruti Agarwal</h4>
 <p>Adobe Research</p>
-<p>Robust image fingerprinting, watermarking, and multimedia forensics.</p>
 </div>
 
 <div class="speaker">
+<img src="assets/tondi.jpg">
 <h4>Prof. Benedetta Tondi</h4>
 <p>University of Siena</p>
-<p>Classical watermarking theory and adversarial signal processing.</p>
 </div>
 
 <div class="speaker">
+<img src="assets/pierre.jpg">
 <h4>Dr. Pierre Fernandez</h4>
 <p>Meta AI (FAIR)</p>
-<p>Multimodal and generative-model watermarking (Stable Signature).</p>
 </div>
 
 <div class="speaker">
+<img src="assets/furong.jpg">
 <h4>Prof. Furong Huang</h4>
 <p>University of Maryland</p>
-<p>Trustworthy machine learning and WAVES benchmark.</p>
 </div>
 
 </div>
-</section>
+</div>
 
-<section>
+<div class="card">
 <h3>Schedule</h3>
-
-<div class="schedule-item">
-<strong>08:30 – 08:35</strong> Introduction & Motivation
+<div class="schedule-item"><strong>08:30 – 08:35</strong> Introduction & Motivation</div>
+<div class="schedule-item"><strong>08:35 – 09:20</strong> Watermarking Before and After Deep Learning</div>
+<div class="schedule-item"><strong>09:20 – 10:05</strong> Multimodal Watermarking</div>
+<div class="schedule-item"><strong>10:15 – 11:00</strong> Benchmarking with WAVES</div>
+<div class="schedule-item"><strong>11:00 – 11:45</strong> GenAI Watermarking & Attribution</div>
+<div class="schedule-item"><strong>11:55 – 12:40</strong> C2PA & Real-World Deployment</div>
+<div class="schedule-item"><strong>12:40 – 12:45</strong> Closing Remarks</div>
 </div>
 
-<div class="schedule-item">
-<strong>08:35 – 09:20</strong> Watermarking Before and After Deep Learning (Image)
-</div>
-
-<div class="schedule-item">
-<strong>09:20 – 10:05</strong> Multimodal Watermarking: Video, Audio, 3D, and Text
-</div>
-
-<div class="schedule-item">
-<strong>10:15 – 11:00</strong> Benchmarking with WAVES
-</div>
-
-<div class="schedule-item">
-<strong>11:00 – 11:45</strong> GenAI Watermarking & Attribution
-</div>
-
-<div class="schedule-item">
-<strong>11:55 – 12:40</strong> C2PA & Content Credentials
-</div>
-
-<div class="schedule-item">
-<strong>12:40 – 12:45</strong> Closing Remarks
-</div>
-
-</section>
-
-<section>
-<h3>Topics Covered</h3>
-<ul>
-<li>Classical watermarking theory</li>
-<li>Deep-learning encoder–decoder watermarking</li>
-<li>Multimodal watermarking (video, audio, 3D, text)</li>
-<li>Robustness benchmarking (WAVES)</li>
-<li>Proactive GenAI watermarking</li>
-<li>C2PA and real-world authenticity frameworks</li>
-</ul>
-</section>
-
-<section>
+<div class="card">
 <h3>Resources</h3>
-<p>Slides, reading list, and code repository will be released closer to CVPR 2026.</p>
-</section>
+<p>
+Slides: Coming Soon<br>
+GitHub Repository: <a href="#">(Link will be added)</a><br>
+Reading List & Benchmarks: Coming Soon
+</p>
+</div>
 
-<footer>
+<div class="card">
+<h3>Selected References</h3>
+<ul>
+<li>Cox et al., Digital Watermarking, 2001</li>
+<li>Tancik et al., StegaStamp, CVPR 2020</li>
+<li>Fernandez et al., Stable Signature, ICCV 2023</li>
+<li>An et al., WAVES, ICML 2024</li>
+<li>Asnani et al., ProMark, CVPR 2024</li>
+</ul>
+</div>
+
+</div>
+
+<div class="footer">
 <p>Contact: vasnani@adobe.com</p>
-<p>© 2026 CVPR Tutorial on Watermarking</p>
-</footer>
+<p>© CVPR 2026 Tutorial on Watermarking</p>
+</div>
 
 </body>
 </html>
